fix uneven borders

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,6 @@
 
 .right-section {
   width: 85vw;
-  padding: 0px 6px;
+  padding: 0px 2px;
   background-color: var(--background-dark-3);
 }
