--- a/frontend/src/Project.css
+++ b/frontend/src/Project.css
@@ -10,7 +10,6 @@
   background-color: var(--background-dark-1);
   border: none;
   font-size: 1.2em;
-  margin: 6px 0px;
   width: 35vw;
 }
 
@@ -19,7 +18,6 @@
   flex-direction: row;
   height: 94vh;
   width: 100%;
-  gap: 5px;
 }
 
 .left-pane {
@@ -28,6 +26,7 @@
   flex-direction: column;
   flex-shrink: 0;
   gap: 2px;
+  border-right: 2px solid var(--background-dark-3);
 }
 
 .left-pane-top {
